excluded rows with nan from key columns

--- a/eda_IM.ipynb
+++ b/eda_IM.ipynb
@@ -4682,7 +4682,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1462, 27)"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1403, 27)"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_data_nona = fire_data.dropna(subset=['AcresBurned', 'Longitude', 'Latitude', 'County', 'Extinguished'])\n",
+    "fire_data_nona.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
