--- a/fire_data_postgresSQL.ipynb
+++ b/fire_data_postgresSQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "[1462 rows x 27 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "'fire_data'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "(1462, 27)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,20 +1049,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-80-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "<ipython-input-11-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  fire_data.describe(include='all')\n",
-      "<ipython-input-80-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "<ipython-input-11-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  fire_data.describe(include='all')\n",
-      "<ipython-input-80-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "<ipython-input-11-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  fire_data.describe(include='all')\n",
-      "<ipython-input-80-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "<ipython-input-11-5bce175b3243>:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  fire_data.describe(include='all')\n"
      ]
     },
@@ -1537,7 +1537,7 @@
        "[13 rows x 27 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -28962,7 +28962,7 @@
        "  ...]}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28973,7 +28973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -29027,7 +29027,7 @@
        "      <td>Stanislaus National Forest/Yosemite National Park</td>\n",
        "      <td>2013</td>\n",
        "      <td>Tuolumne</td>\n",
-       "      <td>2013-09-06 18:30:00+00:00</td>\n",
+       "      <td>2013-09-06T18:30:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.857000</td>\n",
        "      <td>3 miles east of Groveland along Hwy 120</td>\n",
@@ -29051,7 +29051,7 @@
        "      <td>Stanislaus National Forest</td>\n",
        "      <td>2013</td>\n",
        "      <td>Tuolumne</td>\n",
-       "      <td>2013-08-14 08:30:00+00:00</td>\n",
+       "      <td>2013-08-14T08:30:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>38.251080</td>\n",
        "      <td>Near Beardsley Lake, northeast of Sonora</td>\n",
@@ -29075,7 +29075,7 @@
        "      <td>CAL FIRE Tuolumne-Calaveras Unit</td>\n",
        "      <td>2013</td>\n",
        "      <td>Tuolumne</td>\n",
-       "      <td>2013-06-02 16:55:00+00:00</td>\n",
+       "      <td>2013-06-02T16:55:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.915290</td>\n",
        "      <td>off Lime Kiln Rd</td>\n",
@@ -29099,7 +29099,7 @@
        "      <td>CAL FIRE Tuolumne-Calaveras Unit</td>\n",
        "      <td>2014</td>\n",
        "      <td>Tuolumne</td>\n",
-       "      <td>2014-06-05 20:00:00+00:00</td>\n",
+       "      <td>2014-06-05T20:00:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.766170</td>\n",
        "      <td>near Bonds Flat Rd &amp; La Grange Rd (J59), west ...</td>\n",
@@ -29123,7 +29123,7 @@
        "      <td>CAL FIRE Tuolumne-Calaveras Unit</td>\n",
        "      <td>2014</td>\n",
        "      <td>Tuolumne</td>\n",
-       "      <td>2014-06-06 09:30:00+00:00</td>\n",
+       "      <td>2014-06-06T09:30:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.787000</td>\n",
        "      <td>off La Grange Rd (J59) at Hetch Hetchy power l...</td>\n",
@@ -29171,7 +29171,7 @@
        "      <td>Marin County Fire</td>\n",
        "      <td>2017</td>\n",
        "      <td>Marin</td>\n",
-       "      <td>2018-01-09 11:54:00+00:00</td>\n",
+       "      <td>2018-01-09T11:54:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>38.080550</td>\n",
        "      <td>Point Reyes - Petaluma Road, Petaluma</td>\n",
@@ -29195,7 +29195,7 @@
        "      <td>Marin County Fire</td>\n",
        "      <td>2018</td>\n",
        "      <td>Marin</td>\n",
-       "      <td>2019-01-04 09:05:00+00:00</td>\n",
+       "      <td>2019-01-04T09:05:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>38.024470</td>\n",
        "      <td>Samuel P Taylor State Park, northwest of the C...</td>\n",
@@ -29219,7 +29219,7 @@
        "      <td>Marin County Fire</td>\n",
        "      <td>2018</td>\n",
        "      <td>Marin</td>\n",
-       "      <td>2019-01-04 09:22:00+00:00</td>\n",
+       "      <td>2019-01-04T09:22:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>38.071350</td>\n",
        "      <td>Platform Bridge Rd. and Point Reyes Station, n...</td>\n",
@@ -29243,7 +29243,7 @@
        "      <td>San Rafael Fire</td>\n",
        "      <td>2018</td>\n",
        "      <td>Marin</td>\n",
-       "      <td>2019-01-04 10:09:00+00:00</td>\n",
+       "      <td>2019-01-04T10:09:00Z</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.976380</td>\n",
        "      <td>Mission Avenue and C Street, City of San Rafael</td>\n",
@@ -29267,14 +29267,14 @@
        "      <td>Marin County Fire</td>\n",
        "      <td>2019</td>\n",
        "      <td>Marin</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.896231</td>\n",
        "      <td>Highway 1 and Panoramic Hwy, Stinson Beach</td>\n",
        "      <td>-122.636471</td>\n",
        "      <td>Muir Fire</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Thu</td>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
@@ -29304,18 +29304,18 @@
        "1460         12.0                                   San Rafael Fire    \n",
        "1461         67.0                                  Marin County Fire   \n",
        "\n",
-       "      archiveyear    county              extinguished  fatalities   latitude  \\\n",
-       "0            2013  Tuolumne 2013-09-06 18:30:00+00:00         NaN  37.857000   \n",
-       "1            2013  Tuolumne 2013-08-14 08:30:00+00:00         NaN  38.251080   \n",
-       "2            2013  Tuolumne 2013-06-02 16:55:00+00:00         NaN  37.915290   \n",
-       "3            2014  Tuolumne 2014-06-05 20:00:00+00:00         NaN  37.766170   \n",
-       "4            2014  Tuolumne 2014-06-06 09:30:00+00:00         NaN  37.787000   \n",
-       "...           ...       ...                       ...         ...        ...   \n",
-       "1457         2017     Marin 2018-01-09 11:54:00+00:00         NaN  38.080550   \n",
-       "1458         2018     Marin 2019-01-04 09:05:00+00:00         NaN  38.024470   \n",
-       "1459         2018     Marin 2019-01-04 09:22:00+00:00         NaN  38.071350   \n",
-       "1460         2018     Marin 2019-01-04 10:09:00+00:00         NaN  37.976380   \n",
-       "1461         2019     Marin                       NaT         NaN  37.896231   \n",
+       "      archiveyear    county          extinguished  fatalities   latitude  \\\n",
+       "0            2013  Tuolumne  2013-09-06T18:30:00Z         NaN  37.857000   \n",
+       "1            2013  Tuolumne  2013-08-14T08:30:00Z         NaN  38.251080   \n",
+       "2            2013  Tuolumne  2013-06-02T16:55:00Z         NaN  37.915290   \n",
+       "3            2014  Tuolumne  2014-06-05T20:00:00Z         NaN  37.766170   \n",
+       "4            2014  Tuolumne  2014-06-06T09:30:00Z         NaN  37.787000   \n",
+       "...           ...       ...                   ...         ...        ...   \n",
+       "1457         2017     Marin  2018-01-09T11:54:00Z         NaN  38.080550   \n",
+       "1458         2018     Marin  2019-01-04T09:05:00Z         NaN  38.024470   \n",
+       "1459         2018     Marin  2019-01-04T09:22:00Z         NaN  38.071350   \n",
+       "1460         2018     Marin  2019-01-04T10:09:00Z         NaN  37.976380   \n",
+       "1461         2019     Marin                   NaN         NaN  37.896231   \n",
        "\n",
        "                                           firelocation   longitude  \\\n",
        "0               3 miles east of Groveland along Hwy 120 -120.086000   \n",
@@ -29330,18 +29330,18 @@
        "1460    Mission Avenue and C Street, City of San Rafael -122.527500   \n",
        "1461         Highway 1 and Panoramic Hwy, Stinson Beach -122.636471   \n",
        "\n",
-       "               firename  ...          timeextinguished dayofweekstartedname  \\\n",
-       "0              Rim Fire  ... 2013-09-06 18:30:00+00:00                  Sat   \n",
-       "1            Power Fire  ... 2013-08-14 08:30:00+00:00                  Mon   \n",
-       "2           Murphy Fire  ... 2013-06-02 16:55:00+00:00                  Sun   \n",
-       "3               59 Fire  ... 2014-06-05 20:00:00+00:00                  Wed   \n",
-       "4     Hetch Hetchy Fire  ... 2014-06-06 09:30:00+00:00                  Thu   \n",
-       "...                 ...  ...                       ...                  ...   \n",
-       "1457      Spaletta Fire  ... 2018-01-09 11:54:00+00:00                  Wed   \n",
-       "1458        Irving Fire  ... 2019-01-04 09:05:00+00:00                  Mon   \n",
-       "1459        Bridge Fire  ... 2019-01-04 09:22:00+00:00                  Wed   \n",
-       "1460       Mission Fire  ... 2019-01-04 10:09:00+00:00                  Sat   \n",
-       "1461          Muir Fire  ...                       NaT                  Thu   \n",
+       "               firename  ...           timeextinguished dayofweekstartedname  \\\n",
+       "0              Rim Fire  ...  2013-09-06 18:30:00+00:00                  Sat   \n",
+       "1            Power Fire  ...  2013-08-14 08:30:00+00:00                  Mon   \n",
+       "2           Murphy Fire  ...  2013-06-02 16:55:00+00:00                  Sun   \n",
+       "3               59 Fire  ...  2014-06-05 20:00:00+00:00                  Wed   \n",
+       "4     Hetch Hetchy Fire  ...  2014-06-06 09:30:00+00:00                  Thu   \n",
+       "...                 ...  ...                        ...                  ...   \n",
+       "1457      Spaletta Fire  ...  2018-01-09 11:54:00+00:00                  Wed   \n",
+       "1458        Irving Fire  ...  2019-01-04 09:05:00+00:00                  Mon   \n",
+       "1459        Bridge Fire  ...  2019-01-04 09:22:00+00:00                  Wed   \n",
+       "1460       Mission Fire  ...  2019-01-04 10:09:00+00:00                  Sat   \n",
+       "1461          Muir Fire  ...                        NaN                  Thu   \n",
        "\n",
        "      dayofweekstartednum      duration  date_established  \\\n",
        "0                       6     20.128472              1850   \n",
@@ -29372,7 +29372,7 @@
        "[1462 rows x 27 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29383,7 +29383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29393,7 +29393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -29402,7 +29402,7 @@
        "(1462, 27)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
