added 'all_fires' route to Flask in app.py

--- a/fire_data_geoJSON_postgresSQL.ipynb
+++ b/fire_data_geoJSON_postgresSQL.ipynb
@@ -27312,7 +27312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27398,7 +27398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27427,6 +27427,33 @@
     "# Write geoJSON formatted text to a text file\n",
     "with open(\"deadliest_fires.json\", \"w\") as output:\n",
     "    json.dump(daedliest_fires_geoJSON, output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FLask path 4: Pull data for all fires\n",
+    "query_all = \"\"\"SELECT * FROM fire_data;\"\"\"\n",
+    "# Execute sql query \n",
+    "data_all_fires = engine.execute(query_all)  \n",
+    "\n",
+    "# Pull data table column names\n",
+    "table_headers = engine.execute(query_all)._metadata.keys\n",
+    "\n",
+    "# convert to DF\n",
+    "df_all_fires = pd.DataFrame(data_all_fires, columns=table_headers)\n",
+    "# df_deadliest\n",
+    "\n",
+    "# Convert refined data frame to geoJSON format\n",
+    "all_fires_geoJSON = df_to_geojson(df_all_fires , df_all_fires.drop(['latitude','longitude'], axis=1).columns)\n",
+    "# daedliest_fires_geoJSON\n",
+    "\n",
+    "# Write geoJSON formatted text to a text file\n",
+    "with open(\"all_fires.json\", \"w\") as output:\n",
+    "    json.dump(all_fires_geoJSON, output)"
    ]
   },
   {
