debugged app.py

--- a/fire_data_geoJSON_postgresSQL.ipynb
+++ b/fire_data_geoJSON_postgresSQL.ipynb
@@ -27312,7 +27312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27356,7 +27356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27398,7 +27398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27431,7 +27431,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'FeatureCollection',\n",
+       " 'features': [{'type': 'Feature',\n",
+       "   'properties': {'firename': 'Camp Fire',\n",
+       "    'firelocation': 'Pulga Road at Camp Creek Road near Jarbo Gap',\n",
+       "    'archiveyear': '2018',\n",
+       "    'started': '2018-11-08 00:33:00-06:00',\n",
+       "    'extinguished': '2018-11-25 02:00:00-06:00',\n",
+       "    'acresburned': '153336.0',\n",
+       "    'fatalities': '85.0',\n",
+       "    'dayofweekstartedname': 'Thu',\n",
+       "    'dayofweekstartednum': '4',\n",
+       "    'duration': '17.0604166666667',\n",
+       "    'county': 'Butte',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-121.4347, 39.8134]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Tubbs Fire (Central LNU Complex)',\n",
+       "    'firelocation': 'off of Hwy 128 and Bennett Ln, Calistoga',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 16:45:00-05:00',\n",
+       "    'extinguished': '2018-02-09 03:27:00-06:00',\n",
+       "    'acresburned': '36807.0',\n",
+       "    'fatalities': '22.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.4875',\n",
+       "    'county': 'Napa',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.62879, 38.60895]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Tubbs Fire (Central LNU Complex)',\n",
+       "    'firelocation': 'off of Hwy 128 and Bennett Ln, Calistoga',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 16:45:00-05:00',\n",
+       "    'extinguished': '2018-02-09 03:27:00-06:00',\n",
+       "    'acresburned': '36807.0',\n",
+       "    'fatalities': '22.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.4875',\n",
+       "    'county': 'Sonoma',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.62879, 38.60895]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Redwood Valley Fire (Mendocino Lake Complex)',\n",
+       "    'firelocation': 'North of Hwy 20, west of Mendocino National Forest, south of Black Bart',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 18:36:00-05:00',\n",
+       "    'extinguished': '2018-02-09 02:56:00-06:00',\n",
+       "    'acresburned': '36523.0',\n",
+       "    'fatalities': '9.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.388888888889',\n",
+       "    'county': 'Mendocino',\n",
+       "    'caucus': 'Rural'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-123.16635, 39.24873]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Atlas Fire (Southern LNU Complex)',\n",
+       "    'firelocation': 'Off of Altas Peak Rd, south of Lake Berryessa',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 16:52:00-05:00',\n",
+       "    'extinguished': '2018-02-09 03:37:00-06:00',\n",
+       "    'acresburned': '51624.0',\n",
+       "    'fatalities': '6.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.489583333333',\n",
+       "    'county': 'Solano',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.24367, 38.39206]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Atlas Fire (Southern LNU Complex)',\n",
+       "    'firelocation': 'Off of Altas Peak Rd, south of Lake Berryessa',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 16:52:00-05:00',\n",
+       "    'extinguished': '2018-02-09 03:37:00-06:00',\n",
+       "    'acresburned': '51624.0',\n",
+       "    'fatalities': '6.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.489583333333',\n",
+       "    'county': 'Napa',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.24367, 38.39206]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Cascade Fire (Wind Complex)',\n",
+       "    'firelocation': 'Cascade Way and Marysville Rd, north of Collins Lake ',\n",
+       "    'archiveyear': '2017',\n",
+       "    'started': '2017-10-08 18:03:00-05:00',\n",
+       "    'extinguished': '2018-02-09 03:39:00-06:00',\n",
+       "    'acresburned': '9989.0',\n",
+       "    'fatalities': '4.0',\n",
+       "    'dayofweekstartedname': 'Sun',\n",
+       "    'dayofweekstartednum': '0',\n",
+       "    'duration': '123.441666666667',\n",
+       "    'county': 'Yuba',\n",
+       "    'caucus': 'Rural'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-121.4021, 39.32198]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Carr Fire',\n",
+       "    'firelocation': 'Hwy 299 and Carr Powerhouse Rd, Whiskeytown',\n",
+       "    'archiveyear': '2018',\n",
+       "    'started': '2018-07-23 08:15:00-05:00',\n",
+       "    'extinguished': '2019-01-04 03:37:00-06:00',\n",
+       "    'acresburned': '229651.0',\n",
+       "    'fatalities': '3.0',\n",
+       "    'dayofweekstartedname': 'Mon',\n",
+       "    'dayofweekstartednum': '1',\n",
+       "    'duration': '164.848611111111',\n",
+       "    'county': 'Trinity',\n",
+       "    'caucus': 'Rural'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.62357, 40.65428]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Carr Fire',\n",
+       "    'firelocation': 'Hwy 299 and Carr Powerhouse Rd, Whiskeytown',\n",
+       "    'archiveyear': '2018',\n",
+       "    'started': '2018-07-23 08:15:00-05:00',\n",
+       "    'extinguished': '2019-01-04 03:37:00-06:00',\n",
+       "    'acresburned': '229651.0',\n",
+       "    'fatalities': '3.0',\n",
+       "    'dayofweekstartedname': 'Mon',\n",
+       "    'dayofweekstartednum': '1',\n",
+       "    'duration': '164.848611111111',\n",
+       "    'county': 'Shasta',\n",
+       "    'caucus': 'Suburban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-122.62357, 40.65428]}},\n",
+       "  {'type': 'Feature',\n",
+       "   'properties': {'firename': 'Woolsey Fire',\n",
+       "    'firelocation': 'E Street and Alfa Road Rd, South of Simi Valley',\n",
+       "    'archiveyear': '2018',\n",
+       "    'started': '2018-11-08 08:24:00-06:00',\n",
+       "    'extinguished': '2019-01-04 02:42:00-06:00',\n",
+       "    'acresburned': '96949.0',\n",
+       "    'fatalities': '3.0',\n",
+       "    'dayofweekstartedname': 'Thu',\n",
+       "    'dayofweekstartednum': '4',\n",
+       "    'duration': '56.7625',\n",
+       "    'county': 'Ventura',\n",
+       "    'caucus': 'Urban'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-118.70128, 34.235]}}]}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daedliest_fires_geoJSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
