implemented horizontal bar chart using chart.js

--- a/eda_IM.ipynb
+++ b/eda_IM.ipynb
@@ -3476,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3485,7 +3485,7 @@
        "(1376, 27)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3498,11 +3498,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "fire_data_nona.to_csv(\"fire_data.csv\", header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1023, 27)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_data_nona.drop_duplicates(subset=['FireName']).shape"
    ]
   },
   {
